Fix scrollbar bug

--- a/app/1/qrecords.css
+++ b/app/1/qrecords.css
@@ -16,7 +16,6 @@ html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-    -ms-overflow-style: scrollbar;
     -webkit-tap-highlight-color: transparent;
 }
 
@@ -285,7 +284,7 @@ svg:not(:root) {
 }
 
 .list-group-item {
-    overflow: scroll;
+    overflow: auto;
     position: relative;
     display: block;
     padding: 0.75rem 1.25rem;
